# PL2025

./: .gitignore  README.md
Projeto_Compilador/: .gitignore  .pylintrc  README.md  pyproject.toml
Projeto_Compilador/.github/workflows/: latex.yml  python-linting.yml
Projeto_Compilador/plpc/: __main__.py  ast.py  error.py  ewvm.py  ewvmpeephole.py  lexer.py  optimizer.py  parser.py  symboltable.py  typechecker.py
Projeto_Compilador/report/: compile.sh  format.sh  report.tex
Projeto_Compilador/report/res/: architecture.drawio  expression-trees.dot  expression-types.dot  variable-reference.dot
Projeto_Compilador/tests/: __init__.py  test_ewvmpeephole.py  test_lexer.py  test_parser.py  test_symboltable.py  test_typechecker.py
Projeto_Compilador/tests/professor/: 1.pas  2.pas  3.pas  4.pas  5.pas  6.pas  7.pas
Projeto_Compilador/tests/programs/: casestatement.pas  io.pas  nestedfor.pas  optimizations.pas
TPC1/: README.md  TPC.hs  TPC.py
TPC2/: Automaton.dot  README.md  TPC.py
TPC3/: README.md  TPC.py  Test.md
TPC4/: README.md  TPC.py  query.txt
TPC5/: README.md  TPC.py  produtos.json
TPC6/: README.md  TPC.py  fuzzer.py
